@@ -636,6 +636,9 @@ print.flexsurvreg <- function(x, ...)
 
 form.model.matrix <- function(object, newdata){
     mfo <- model.frame(object)
+
+    ## If required covariate missing, give a slightly more informative error message than, e.g.
+    ## "Error in eval(expr, envir, enclos) (from flexsurvreg.R#649) : object 'sex' not found"
     covnames <- attr(mfo, "covnames")
     missing.covs <- unique(covnames[!covnames %in% names(newdata)])
     if (length(missing.covs) > 0){
@@ -643,28 +646,14 @@ form.model.matrix <- function(object, newdata){
         plural <- if (length(missing.covs)>1) "s" else ""
         stop(sprintf("Value%s of covariate%s ",plural,plural), paste(missing.covs, collapse=", "), " not supplied in \"newdata\"")
     }
-    extra.covs <- unique(names(newdata)[!names(newdata) %in% covnames])
-    if (length(extra.covs) > 0) {
-        warning("Covariates ", paste(paste("\"", extra.covs, "\"", sep=""), collapse=","), " unknown, ignoring")
-        newdata <- newdata[!names(newdata) %in% extra.covs]
-        if (ncol(newdata)==0) return(as.matrix(0, nrow=1))
-    }
-    ## don't insist on user defining factors in model as factors in newdata, do this for them
-    facs <- sapply(mfo, is.factor)
-    facnames <- gsub(".+\\((.+)\\)","\\1",names(facs))
-    for (i in which(facs))
-        newdata[,facnames[i]] <- factor(newdata[,facnames[i]])
-    temp <- call("model.frame")
-    f2 <- delete.response(terms(object$concat.formula))
-    temp[["formula"]] <- f2
-    temp[["data"]] <- newdata
-    mf <- eval(temp, parent.frame())
-    facs <- names(mf)[sapply(mf, is.factor)]
-    for (i in facs) {
-        unknown.levels <- levels(mf[,i])[!levels(mf[,i]) %in% levels(mfo[,i])]
-        if (length(unknown.levels) > 0) warning("Unknown levels \"", paste(unknown.levels, collapse=","), "\" for factor \"", i, "\"")
-        mf[,i] <- factor(mf[,i], levels=levels(mfo[,i]))
-     }
+
+    ## as in predict.lm 
+    tt <- attr(mfo, "terms")
+    Terms <- delete.response(tt)
+    mf <- model.frame(Terms, newdata, xlev = .getXlevels(tt, mfo))
+    if (!is.null(cl <- attr(Terms, "dataClasses"))) 
+        .checkMFClasses(cl, mf)
+    
     forms <- object$all.formulae
     mml <- vector(mode="list", length=length(object$dlist$pars))
     names(mml) <- names(forms)
@@ -673,6 +662,8 @@ form.model.matrix <- function(object, newdata){
         mml[[i]] <- model.matrix(forms[[i]], mf)
     }
     X <- compress.model.matrices(mml)
+
+    attr(X, "newdata") <- mf # newdata with any extra variables stripped.  Used to name components of summary list
     X
 }
 
@@ -730,8 +721,10 @@ summary.flexsurvreg <- function(object, newdata=NULL, X=NULL, type="survival", f
     }
     dlist <- x$dlist
     ret <- vector(nrow(X), mode="list")
-    if(!is.null(newdata))
-        covnames <- apply(as.data.frame(newdata), 1, function(x)paste0(names(newdata), "=", x, collapse=", "))
+    if(!is.null(newdata)){
+        nd <- attr(X, "newdata")
+        covnames <- apply(as.data.frame(nd), 1, function(x)paste0(names(nd), "=", x, collapse=", "))
+    }
     else covnames <- rownames(X)
     names(ret) <- covnames
     for (i in 1:nrow(X)) {
