@@ -1,3 +1,5 @@
+do we really have to depend on mstate, why not just import the fns used in the vignette
+
 Ongoing problems with Hessian in Weibull models (see p metcalfe example)
 
 dpqrhH survspline: do these work with a single x=0, already filled in in dbase.survspline, so need if (any(ind)) around rest? 
@@ -15,6 +17,7 @@ Generic (restricted) mean of distributions, integration if necessary.
    See surv2sampleComp package
 Restricted SD in same way?
 
+Tidy up summary functions, including bootstrap, covariate handling.
 
 make plot/summary do baseline values of factor covs and mean of continuous
 
