@@ -35,3 +35,39 @@ test_that("custom function in summary.flexsurvreg",{
     median.weibull <- function(t, start, shape, scale) { scale * log(2)^(1/shape) }
 
 })
+
+data(lung)
+
+test_that("newdata in summary.flexsurvreg: dynamic cut, unknown factor level",{
+    fl2a <- flexsurvspline(Surv(time, event = status) ~ factor(sex) + cut(age,c(0,56,69,100)), data = lung, k = 2)
+    su <- summary(fl2a, newdata = lung, B = 0)
+    su1 <- su[[2]][1:5,]
+    su <- summary(fl2a, newdata = lung[2,], B = 0)
+    su2 <- su[[1]][1:5,]
+    expect_equal(su1, su2)
+    fl2b <- flexsurvspline(Surv(time, event = status) ~ factor(sex) + cut(age,4), data = lung, k = 2) # should break second summary 
+    expect_error(summary(fl2b, newdata = lung[2,], B = 0), "factor .+ has new level")
+})
+
+lung$sex <- factor(lung$sex)
+fl3 <- flexsurvspline(Surv(time, event = status) ~ sex + age, data = lung, k = 2)
+
+test_that("newdata in summary.flexsurvreg: extra covariates in the list",{
+    su1 <- summary(fl3, newdata = lung, B = 0)[[1]][1:5,]
+    su2 <- summary(fl3, newdata = lung[1,], B = 0)[[1]][1:5,]
+    expect_equal(su1, su2)
+})
+
+test_that("newdata in summary.flexsurvreg: missing covariates, factor not supplied as factor",{
+    expect_error(summary(fl3, newdata = list(age=10), B = 0), "Value of covariate .+ not supplied")
+})
+
+test_that("newdata in summary.flexsurvreg: factor not supplied as factor",{
+    lung2 <- lung[1,]; lung2$sex <- as.numeric(1)
+    expect_warning(expect_error(summary(fl3, newdata = lung2, B=0), "variable .+ fitted with type"), "not a factor")
+    ## numeric doesn't work 
+    expect_warning(expect_error(summary(fl3, newdata = list(age=60, sex=1), B=0), "variable .+ fitted with type"), "not a factor")
+    ## character works if matches one of the factor levels
+    su <- summary(fl3, newdata = list(age=60, sex="1"), B=0) 
+    expect_error(summary(fl3, newdata = list(age=60, sex="foo"), B=0), "factor .+ has new level")
+})
